 ** Fixed an issue where strings imported from older version of TellMeWhen (roughly pre-v6.0.0) could have their StackMin/Max and DurationMin/Max settings as strings instead of numbers.
 ** The "Equipment set equipped" condition should properly update when saving the equipment set that is currently equipped.

===v6.2.6===
 * Bug Fixes:
 ** Added a hack to ElvUI's timer texts so that they will once again obey the setting in TellMeWhen. Previously, they would be enabled for all icons because of a change made by ElvUI's developers.
 ** Spell Cooldown icons that are tracking by spellID instead of by name should once again reflect spell charges properly (this functionality was disrupted by a bug introduced by Blizzard in patch 5.4).

===v6.2.5===
 * ElvUI's timer texts are once again supported by TellMeWhen.

===v6.2.4===
 * Added DogTags for string.gsub and string.find.
 * Added Yu'lon's Barrier to the DamageShield equivalency.

 * Bug Fixes:
 ** IconModule_Alpha/Alpha.lua:84: attempt to index local "IconModule_Alpha" (a nil value)
 ** Rune icons will now behave properly when no runes are found that match the types configured for the icon.
 ** The Banish loss of control type was accidentally linked to the Fear loss of control type - this has been fixed.
 ** Unit cooldown icons should now attempt to show the first usable spell even if no units being checked have casted any spells yet.

===v6.2.3===
 * IMPORTANT: The color settings for all timer bars (including bar group and timer overlay bars) have changed a bit:
 ** The labels for these settings now correctly correspond to the state that they will be used for.
 ** The colors will automatically switch when you enable the "Fill bar up" setting for a bar.
 ** These changes will probably require you to reconfigure some of your settings.

 * Icons in groups that use the Bar display method can now have their colors configured on a per-icon basis.